--- a/View/WebViews/CreateReservationPage.xaml
+++ b/View/WebViews/CreateReservationPage.xaml
@@ -4,9 +4,15 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.View.WebViews"
+      xmlns:converter="clr-namespace:BookingApp.Converters"
       mc:Ignorable="d" 
-      d:DesignHeight="480" d:DesignWidth="800"
+      d:DesignHeight="530" d:DesignWidth="850"
       Title="CreateReservationPage">
+
+    <Page.Resources>
+        <converter:CountToBooleanConverter x:Key="CountToBooleanConverter"/>
+    </Page.Resources>
+
     <Grid Background="White">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -15,14 +21,14 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Border Grid.Column="0" BorderBrush="Gray" BorderThickness="2">
+            <Border Grid.Column="0" BorderBrush="Gray" BorderThickness="0 0 4 0">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock x:Name="textBlockName" TextWrapping="Wrap" FontSize="15" Text="{Binding Name}" Margin="23,26,23,155" Width="150" TextAlignment="Center" Grid.Row="0"/>
-                    <Border Height="110" Width="110" CornerRadius="10" Grid.Row="0" Margin="43,105,43,23">
+                    <TextBlock x:Name="textBlockName" TextWrapping="Wrap" FontSize="15" Text="{Binding Name}" Margin="23,26,23,199" Width="150" TextAlignment="Center" Grid.Row="0"/>
+                    <Border Height="110" Width="110" CornerRadius="10" Grid.Row="0" Margin="43,78,43,77" RenderTransformOrigin="0.509,0.177">
                         <Border.Background>
                             <ImageBrush ImageSource="{Binding ProfilePictures[0]}" Stretch="Fill"/>
                         </Border.Background>
@@ -30,6 +36,7 @@
 
                     <Grid Grid.Row="1">
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
@@ -61,23 +68,24 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Content="Start date" Grid.Column="0" Grid.Row="0" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <DatePicker x:Name="datePickerStartDate" Grid.Column="1" Grid.Row="0" VerticalContentAlignment="Center" Margin="5,16,10,16" SelectedDateChanged="UpdateSuggestedReservations"/>
+                <Label Content="Start date" Grid.Column="0" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="13,0,0,0"/>
+                <DatePicker x:Name="datePickerStartDate" Grid.Column="1" Grid.Row="0" VerticalContentAlignment="Center" Margin="10,22,10,22" SelectedDateChanged="UpdateSuggestedReservations"/>
 
-                <Label Content="End date" Grid.Column="0" Grid.Row="1" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <DatePicker x:Name="datePickerEndDate" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" Margin="5,16,10,16" SelectedDateChanged="UpdateSuggestedReservations"/>
+                <Label Content="End date" Grid.Column="0" Grid.Row="1" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="13,0,0,0"/>
+                <DatePicker x:Name="datePickerEndDate" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" Margin="10,22,10,22" SelectedDateChanged="UpdateSuggestedReservations"/>
 
-                <Label Content="Days" Grid.Column="0" Grid.Row="2" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <TextBox x:Name="textBoxReservationDays" Grid.Column="1" Grid.Row="2" Margin="5,18,78,18" VerticalContentAlignment="Center" FontSize="15" TextChanged="UpdateSuggestedReservations"/>
+                <Label Content="Days" Grid.Column="0" Grid.Row="2" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="13,0,0,0"/>
+                <TextBox x:Name="textBoxReservationDays" Grid.Column="1" Grid.Row="2" Margin="10,22,65,22" VerticalContentAlignment="Center" FontSize="15" TextChanged="UpdateSuggestedReservations"/>
 
-                <Label Content="Guests" Grid.Column="0" Grid.Row="3" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <DockPanel Grid.Column="1" Grid.Row="2" Margin="5,57,0,0" Grid.RowSpan="2">
+                <Label Content="Guests" Grid.Column="0" Grid.Row="3" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="13,0,0,0"/>
+                <DockPanel Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Width="180" Height="70" VerticalAlignment="Center" Margin="10,0,0,0">
                     <TextBox x:Name="textBoxGuests" Text="{Binding ElementName=sliderGuests, Path=Value}" Width="29" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15" TextChanged="UpdateSuggestedReservations"/>
                     <Slider x:Name="sliderGuests" Grid.Row="4" Grid.Column="1" Margin="5,16,10,16" Minimum="1" Maximum="20" Value="{Binding ElementName=textBoxGuests, Path=Text}" VerticalAlignment="Center" TickFrequency="1" IsSnapToTickEnabled="True"/>
                 </DockPanel>
 
                 <Label x:Name="errorLabel" Content="" Margin="10,125,10,75" Grid.Row="4" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-                <Button x:Name="buttonConfirm" Content="Confirm booking" Grid.Row="4" Margin="90,180,90,25" FontWeight="Bold" FontSize="13" Grid.ColumnSpan="2" Click="ButtonConfirmClick"/>
+                <Button x:Name="buttonConfirm" Content="Confirm booking" Grid.Row="4" Margin="90,180,90,25" FontWeight="Bold" FontSize="13" Grid.ColumnSpan="2" Click="ButtonConfirmClick"
+                        IsEnabled="{Binding ElementName=dataGridSuggestedDates, Path=SelectedItems.Count, Converter={StaticResource CountToBooleanConverter}}"/>
 
             </Grid>
 
@@ -87,7 +95,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Label Content="Suggested reservations" Grid.Row="0" FontSize="20" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <Label Content="Suggested dates" Grid.Row="0" FontSize="20" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
                 <DataGrid x:Name="dataGridSuggestedDates" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False" Margin="10,0,10,25">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Start date" Binding="{Binding StartDate, StringFormat={}{0:dd-MMM-yyyy}}" Width="*"/>
