--- a/View/WebViews/AccommodationCard.xaml
+++ b/View/WebViews/AccommodationCard.xaml
@@ -6,10 +6,31 @@
              xmlns:local="clr-namespace:BookingApp.View.WebViews"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
+    <UserControl.Resources>
+        <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/AccommodationCard/location-icon.png"/>
+        <BitmapImage x:Key="CategoryIcon" UriSource="../../Resources/Images/AccommodationCard/apartment-icon.png"/>
+        <BitmapImage x:Key="MinimumDaysIcon" UriSource="../../Resources/Images/AccommodationCard/calendar-icon.png"/>
+        <BitmapImage x:Key="CapacityIcon" UriSource="../../Resources/Images/AccommodationCard/capacity-icon.png"/>
+
+        <Style TargetType="Image">
+            <Setter Property="Height" Value="16" />
+            <Setter Property="Width" Value="16" />
+            <Setter Property="Margin" Value="0 10 0 0"/>
+            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
+        </Style>
+
+        <Style TargetType="TextBlock">
+            <Setter Property="Margin" Value="10 10 0 0"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+        
+    </UserControl.Resources>
+    
     <Border Margin="5 5 5 5" BorderBrush="Gray" BorderThickness="1" Width="350" CornerRadius="10">
         <Grid MouseLeftButtonDown="AccommodationCardClick">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="110"/>
+                <ColumnDefinition Width="138"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
@@ -22,7 +43,7 @@
                 <TextBlock Grid.Row="0" FontSize="18" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Name}"/>
             </Border>
 
-            <Border Grid.Column="0" Grid.Row="1" Height="100" Width="100" CornerRadius="10" Margin="10 0 0 0">
+            <Border Grid.Column="0" Grid.Row="1" Height="128" Width="128" CornerRadius="10" Margin="10 0 0 0">
                 <Border.Background>
                     <ImageBrush ImageSource="{Binding ProfilePictures[0]}" Stretch="Fill"/>
                 </Border.Background>
@@ -36,10 +57,34 @@
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding DisplayLocation, StringFormat=Location: {0}}"/>
-                <TextBlock Grid.Row="1" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding Type, StringFormat=Category: {0}}"/>
-                <TextBlock Grid.Row="2" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding MinReservationDays, StringFormat=Minimum days: {0}}"/>
-                <TextBlock Grid.Row="3" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding MaxGuestNumber, StringFormat=Capacity: {0}}"/>
+                <Label Grid.Row="0">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{StaticResource LocationIcon}"/>
+                        <TextBlock HorizontalAlignment="Left" Text="{Binding DisplayLocation}"/>
+                    </StackPanel>
+                </Label>
+
+                <Label Grid.Row="1">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{StaticResource CategoryIcon}"/>
+                        <TextBlock Text="{Binding Type}"/>
+                    </StackPanel>
+                </Label>
+
+                <Label Grid.Row="2">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{StaticResource MinimumDaysIcon}"/>
+                        <TextBlock Text="{Binding MinReservationDays, StringFormat=Minimum days: {0}}"/>
+                    </StackPanel>
+                </Label>
+
+                <Label Grid.Row="3">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{StaticResource CapacityIcon}"/>
+                        <TextBlock Text="{Binding MaxGuestNumber, StringFormat=Capacity: {0}}"/>
+                    </StackPanel>
+                </Label>
+                
             </Grid>
         </Grid>
     </Border>
