--- a/View/WebViews/ReservationsPage.xaml
+++ b/View/WebViews/ReservationsPage.xaml
@@ -7,6 +7,44 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
     <Grid>
-        <TextBlock Foreground="Black" VerticalAlignment="Center" HorizontalAlignment="Center">This is reservations page</TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0" Background="LightGray" Height="80">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Column="0" Content="Reservations" FontSize="20" VerticalContentAlignment="Center" Margin="10 0 0 0"/>
+                <Button x:Name="buttonScheduled" Grid.Column="1" Content="Scheduled" Height="30" Width="100" VerticalAlignment="Center"/>
+                <Button x:Name="buttonExpired" Grid.Column="2" Content="Expired" Height="30" Width="100" VerticalAlignment="Center"/>
+            </Grid>
+
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                <ItemsControl x:Name="itemsControlReservations" ItemsSource="{Binding _reservationDTOs}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <local:AccommodationReservationCard/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </ScrollViewer>
+        </Grid>
+
     </Grid>
 </Page>
