--- a/View/WebViews/AccommodationReservationCard.xaml
+++ b/View/WebViews/AccommodationReservationCard.xaml
@@ -8,13 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
-        <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/AccommodationCard/location-icon.png"/>
-        <BitmapImage x:Key="CategoryIcon" UriSource="../../Resources/Images/AccommodationCard/apartment-icon.png"/>
-        <BitmapImage x:Key="MinimumDaysIcon" UriSource="../../Resources/Images/AccommodationCard/calendar-icon.png"/>
-        <BitmapImage x:Key="CapacityIcon" UriSource="../../Resources/Images/AccommodationCard/capacity-icon.png"/>
-        <BitmapImage x:Key="CancelEventIcon" UriSource="../../Resources/Images/AccommodationCard/cancel-event-icon.png"/>
-        <BitmapImage x:Key="ReviewIcon" UriSource="../../Resources/Images/AccommodationCard/star-icon.png"/>
-        <BitmapImage x:Key="RescheduleIcon" UriSource="../../Resources/Images/AccommodationCard/reschedule-icon.png"/>
+        <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
+        <BitmapImage x:Key="HouseIcon" UriSource="../../Resources/Images/Icons/house-icon.png"/>
+        <BitmapImage x:Key="CalendarIcon" UriSource="../../Resources/Images/Icons/calendar-icon.png"/>
+        <BitmapImage x:Key="PeopleIcon" UriSource="../../Resources/Images/Icons/people-icon.png"/>
+        <BitmapImage x:Key="CancelEventIcon" UriSource="../../Resources/Images/Icons/cancel-event-icon.png"/>
+        <BitmapImage x:Key="ReviewIcon" UriSource="../../Resources/Images/Icons/star-icon.png"/>
+        <BitmapImage x:Key="RescheduleIcon" UriSource="../../Resources/Images/Icons/reschedule-icon.png"/>
 
         <Style x:Key="InfoTextBlock" TargetType="TextBlock">
             <Setter Property="Margin" Value="10 5 0 5"/>
@@ -62,21 +62,21 @@
 
             <Label Grid.Row="2" Grid.Column="0">
                 <StackPanel Orientation="Horizontal">
-                    <Image Style="{StaticResource InfoImage}" Source="{StaticResource CategoryIcon}"/>
+                    <Image Style="{StaticResource InfoImage}" Source="{StaticResource HouseIcon}"/>
                     <TextBlock Style="{StaticResource InfoTextBlock}" Text="{Binding AccommodationType}"/>
                 </StackPanel>
             </Label>
 
             <Label Grid.Row="3" Grid.Column="0">
                 <StackPanel Orientation="Horizontal">
-                    <Image Style="{StaticResource InfoImage}" Source="{StaticResource CapacityIcon}"/>
+                    <Image Style="{StaticResource InfoImage}" Source="{StaticResource PeopleIcon}"/>
                     <TextBlock Style="{StaticResource InfoTextBlock}" Text="{Binding GuestsNumber, StringFormat=Guests: {0}}"/>
                 </StackPanel>
             </Label>
 
             <Label Grid.Row="2" Grid.Column="1">
                 <StackPanel Orientation="Horizontal">
-                    <Image Style="{StaticResource InfoImage}" Source="{StaticResource MinimumDaysIcon}"/>
+                    <Image Style="{StaticResource InfoImage}" Source="{StaticResource CalendarIcon}"/>
                     <TextBlock Style="{StaticResource InfoTextBlock}" FontSize="9" Text="{Binding DateString}"/>
                 </StackPanel>
             </Label>
