--- a/View/WebViews/AccommodationReservationCard.xaml
+++ b/View/WebViews/AccommodationReservationCard.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookingApp.View.WebViews"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             DataContextChanged="UserControlDataContextChanged">
 
     <UserControl.Resources>
         <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
@@ -100,7 +101,7 @@
                 </WrapPanel>
             </Button>
             
-            <Button x:Name="buttonCancel" Grid.Column="2" Grid.Row="3" Margin="30 10 10 10">
+            <Button x:Name="buttonCancel" Grid.Column="2" Grid.Row="3" Margin="30 10 10 10" Click="ButtonCancelClick">
                 <WrapPanel>
                     <Image Style="{StaticResource ButtonImage}" Source="{StaticResource CancelEventIcon}"/>
                 </WrapPanel>
