--- a/View/WebViews/ReservationsPage.xaml
+++ b/View/WebViews/ReservationsPage.xaml
@@ -19,56 +19,88 @@
     </Page.Resources>
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0" Background="LightGray" Height="80">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+                <Grid Grid.Row="0" Background="LightGray" Height="80">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-                <Label Grid.Column="0" Content="Reservations" FontSize="20" VerticalContentAlignment="Center" Margin="10 0 0 0"/>
+                    <Label Grid.Column="0" Content="Reservations" FontSize="20" VerticalContentAlignment="Center" Margin="10 0 0 0"/>
 
-                <Button x:Name="buttonScheduled" Grid.Column="1" Height="30" Width="120" VerticalAlignment="Center" Click="ButtonScheduledClick">
-                    <WrapPanel>
-                        <Image Style="{StaticResource ButtonImage}" Source="{StaticResource ScheduledIcon}"/>
-                        <TextBlock Text="Scheduled" Margin="10 0 0 0"/>
-                    </WrapPanel>    
-                </Button>
+                    <Button x:Name="buttonScheduled" Grid.Column="1" Height="30" Width="120" VerticalAlignment="Center" Click="ButtonScheduledClick">
+                        <WrapPanel>
+                            <Image Style="{StaticResource ButtonImage}" Source="{StaticResource ScheduledIcon}"/>
+                            <TextBlock Text="Scheduled" Margin="10 0 0 0"/>
+                        </WrapPanel>
+                    </Button>
 
-                <Button x:Name="buttonExpired" Grid.Column="2" Height="30" Width="120" VerticalAlignment="Center" Click="ButtonExpiredClick">
-                    <WrapPanel>
-                        <Image Style="{StaticResource ButtonImage}" Source="{StaticResource TimeIcon}"/>
-                        <TextBlock Text="Expired" Margin="10 0 0 0"/>
-                    </WrapPanel>
-                </Button>
+                    <Button x:Name="buttonExpired" Grid.Column="2" Height="30" Width="120" VerticalAlignment="Center" Click="ButtonExpiredClick">
+                        <WrapPanel>
+                            <Image Style="{StaticResource ButtonImage}" Source="{StaticResource TimeIcon}"/>
+                            <TextBlock Text="Expired" Margin="10 0 0 0"/>
+                        </WrapPanel>
+                    </Button>
+                </Grid>
+
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0 0 0 25">
+                    <ItemsControl x:Name="itemsControlReservations" ItemsSource="{Binding _reservationDTOs}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <local:AccommodationReservationCard/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </ScrollViewer>
             </Grid>
 
-            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0,0,0,25">
-                <ItemsControl x:Name="itemsControlReservations" ItemsSource="{Binding _reservationDTOs}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <local:AccommodationReservationCard/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </ScrollViewer>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Border Background="LightGray" Height="80" Grid.Row="0" BorderThickness="5 0 0 0">
+                    <Label Grid.Column="0" Content="Reschedule date requests" FontSize="20" VerticalContentAlignment="Center" Margin="10 0 0 0"/>
+                </Border>
+
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0,0,0,25">
+                    <ItemsControl x:Name="itemsControlRescheduleRequests" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </ScrollViewer>
+            </Grid>
         </Grid>
+
+        <Rectangle x:Name="rectBlurBackground" Fill="Gray" Opacity="0.5" Visibility="Hidden"/>
+
+        <local:RescheduleReservationModalDialog x:Name="rescheduleModalDialog"
+            HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Hidden"/>
 
     </Grid>
 </Page>
