--- a/View/WebViews/RescheduleReservationModalDialog.xaml
+++ b/View/WebViews/RescheduleReservationModalDialog.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookingApp.View.WebViews"
              mc:Ignorable="d" 
-             d:DesignHeight="230" d:DesignWidth="800">
+             d:DesignHeight="230" d:DesignWidth="800"
+             HorizontalAlignment="Center" VerticalAlignment="Center">
 
     <UserControl.Resources>
         <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
@@ -36,12 +37,12 @@
                            Text="Reschedule reservation date"/>
 
 
-            <Label Grid.Row="1" FontSize="15" Content="Name" HorizontalAlignment="Left" Margin="10 10 0 10"/>
+            <Label Grid.Row="1" FontSize="15" Content="{Binding AccommodationName}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
 
             <Label Grid.Row="1" HorizontalAlignment="Right" Margin="0 10 10 10">
                 <WrapPanel>
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource LocationIcon}"/>
-                    <TextBlock Text="Testst"/>
+                    <TextBlock Text="{Binding AccommodationLocation}"/>
                 </WrapPanel>
             </Label>
 
@@ -55,25 +56,25 @@
                 <Label Grid.Column="0" Margin="10 5 0 0">
                     <WrapPanel>
                         <Image Style="{StaticResource ImageStyle}" Height="20" Width="20" Source="{StaticResource CalendarIcon}"/>
-                        <TextBlock FontSize="15" Text="Date"/>
+                        <TextBlock FontSize="15" Text="{Binding Path=StartDate}"/>
                     </WrapPanel>
                 </Label>
 
                 <Image Grid.Column="1" Style="{StaticResource ImageStyle}" Source="{StaticResource RightArrowIcon}" Width="32" Height="32"
                        VerticalAlignment="Top" Margin="10 5 10 0"/>
 
-                <DatePicker Grid.Column="3" Margin="10 10 10 30" VerticalContentAlignment="Center"/>
+                <DatePicker x:Name="dataPickerNewDate" Grid.Column="3" Margin="10 10 10 30" VerticalContentAlignment="Center"/>
 
             </Grid>
 
-            <Button Grid.Row="3" Margin="10" HorizontalAlignment="Left">
+            <Button x:Name="buttonCancel" Grid.Row="3" Margin="10" HorizontalAlignment="Left" Click="ButtonCancelClick">
                 <WrapPanel Margin="10">
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource CaneclIcon}"/>
-                    <TextBlock Text="Confirm"/>
+                    <TextBlock Text="Cancel"/>
                 </WrapPanel>
             </Button>
 
-            <Button Grid.Row="3" Margin="10" HorizontalAlignment="Right">
+            <Button Grid.Row="3" Margin="10" HorizontalAlignment="Right" Click="ButtonConfirmClick">
                 <WrapPanel Margin="10">
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource ConfirmIcon}"/>
                     <TextBlock Text="Confirm"/>
