--- a/View/WebViews/ReservationsPage.xaml
+++ b/View/WebViews/ReservationsPage.xaml
@@ -83,9 +83,10 @@
                 </Border>
 
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0,0,0,25">
-                    <ItemsControl x:Name="itemsControlRescheduleRequests" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
+                    <ItemsControl x:Name="itemsControlRescheduleRequests" ItemsSource="{Binding _rescheduleRequestDTOs}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
+                                <local:RescheduleRequestCard/>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                         <ItemsControl.ItemsPanel>
