refac: Changed binding in XAML to match new DTO properties

--- a/View/WebViews/AccommodationCard.xaml
+++ b/View/WebViews/AccommodationCard.xaml
@@ -60,7 +60,7 @@
                 <Label Grid.Row="0">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="{StaticResource LocationIcon}"/>
-                        <TextBlock HorizontalAlignment="Left" Text="{Binding DisplayLocation}"/>
+                        <TextBlock HorizontalAlignment="Left" Text="{Binding Location.LocationInfoTemplate}"/>
                     </StackPanel>
                 </Label>
 
