--- a/View/WebViews/CreateReservationPage.xaml
+++ b/View/WebViews/CreateReservationPage.xaml
@@ -71,7 +71,7 @@
                         <Label Grid.Row="0" HorizontalContentAlignment="Center" Margin="0 0 0 10">
                             <StackPanel Orientation="Horizontal">
                                 <Image Source="{StaticResource LocationIcon}"/>
-                                <TextBlock x:Name="textBoxLocation" Style="{StaticResource AccommodationInfoStyle}" Text="{Binding DisplayLocation}"/>
+                                <TextBlock x:Name="textBoxLocation" Style="{StaticResource AccommodationInfoStyle}" Text="{Binding Location.LocationInfoTemplate}"/>
                             </StackPanel>
                         </Label>
 
