--- a/View/WebViews/RescheduleReservationModalDialog.xaml
+++ b/View/WebViews/RescheduleReservationModalDialog.xaml
@@ -37,12 +37,12 @@
                            Text="Reschedule reservation date"/>
 
 
-            <Label Grid.Row="1" FontSize="15" Content="{Binding AccommodationName}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
+            <Label Grid.Row="1" FontSize="15" Content="{Binding Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
 
             <Label Grid.Row="1" HorizontalAlignment="Right" Margin="0 10 10 10">
                 <WrapPanel>
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource LocationIcon}"/>
-                    <TextBlock Text="{Binding AccommodationLocation}"/>
+                    <TextBlock Text="{Binding Accommodation.Location.LocationInfoTemplate}"/>
                 </WrapPanel>
             </Label>
 
@@ -56,7 +56,7 @@
                 <Label Grid.Column="0" Margin="10 5 0 0">
                     <WrapPanel>
                         <Image Style="{StaticResource ImageStyle}" Height="20" Width="20" Source="{StaticResource CalendarIcon}"/>
-                        <TextBlock FontSize="15" Text="{Binding Path=StartDate}"/>
+                        <TextBlock FontSize="15" Text="{Binding StartDate}"/>
                     </WrapPanel>
                 </Label>
 
